fix: issue with stretched news images home page

--- a/css/style.css
+++ b/css/style.css
@@ -327,7 +327,6 @@ header {
 
 .news-img{
 	flex-shrink: 0;
-  width: 100%;
 	max-width: 100%;
 	max-height: 150px;
 	display: block;
